--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b11dad52",
+   "id": "a4c6ec9a",
    "metadata": {},
    "source": [
     "# Data Science Tools and Ecosystem"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f9b3df5",
+   "id": "55420fda",
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -18,21 +18,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a388a040",
+   "id": "2a7cad1a",
    "metadata": {},
    "source": [
     "<b> Objectives: </b>\n",
     "- List popular languages for Data Science\n",
     "- List commonly used libraries in Data Science\n",
-    "- List examples of arithmetic expressions in Python\n",
-    "\n",
-    "## Author\n",
-    "Michael Lee"
+    "- List examples of arithmetic expressions in Python"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5d337f00",
+   "id": "f9ec2a19",
    "metadata": {},
    "source": [
     "Some of the popular languages that Data Scientists use are:\n",
@@ -44,7 +41,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0cd1f075",
+   "id": "dd84aacc",
    "metadata": {},
    "source": [
     "Some of the commonly used libraries used by Data Scientists include:\n",
@@ -56,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a4b5814",
+   "id": "3bef8607",
    "metadata": {},
    "source": [
     "| Data Science Tools |\n",
@@ -68,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a07dd98",
+   "id": "480018ac",
    "metadata": {},
    "source": [
     "### Below are a few examples of evaluating arithmetic expressions in Python."
@@ -77,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8cd19356",
+   "id": "e9a03a9d",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "b515154e",
+   "id": "e38fac9f",
    "metadata": {},
    "outputs": [
     {
@@ -121,9 +118,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "356e3f56",
+   "id": "44a55dad",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Author\n",
+    "Michael Lee"
+   ]
   }
  ],
  "metadata": {
